Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids: Increment instead of decrement InterpCounter; make 1-offset

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -323,7 +323,7 @@
     "  char filename[100];\n",
     "  sprintf (filename, \"%s/interp_sph_grids.dat\", out_dir);\n",
     "  FILE *file;\n",
-    "  if(*InterpCounter == NumInterpFunctions) {\n",
+    "  if(*InterpCounter == 1) {\n",
     "    file = fopen (filename,\"w\");\n",
     "  } else {\n",
     "    file = fopen (filename,\"a+\");\n",
@@ -475,13 +475,14 @@
     "from collections import namedtuple\n",
     "gf_interp = namedtuple('gf_interp', 'description order')\n",
     "gf_interp_list = []\n",
+    "gf_interp_list.append(gf_interp(\"dummy -- used because this is a 1-offset array\",order=\"-100\"))\n",
     "\n",
     "interped_gf = gri.register_gridfunctions(\"AUX\",\"interped_gf\")\n",
     "\n",
     "def interp_fileout(which_InterpCounter, expression, filename):\n",
     "    kernel = fin.FD_outputC(\"returnstring\",lhrh(lhs=gri.gfaccess(\"out_gfs\",\"interped_gf\"),rhs=expression),\"outCverbose=False\")\n",
     "    output_type=\"a\"\n",
-    "    if which_InterpCounter == 0:\n",
+    "    if which_InterpCounter == 1:\n",
     "        output_type=\"w\"\n",
     "    \n",
     "    with open(filename, output_type) as file:\n",
@@ -517,7 +518,7 @@
    "source": [
     "NRPyoutfilename = \"interp_sph_grids_ETK/src/list_of_functions_to_interpolate.h\"\n",
     "\n",
-    "which_InterpCounter = 0"
+    "which_InterpCounter = 1"
    ]
   },
   {
@@ -856,14 +857,14 @@
    "source": [
     "with open(\"interp_sph_grids_ETK/src/get_gf_name.h\", \"w\") as file:\n",
     "    file.write(\"void get_gf_name(const int InterpCounter,char gf_name[100]) {\\n\")\n",
-    "    for i in range(which_InterpCounter):\n",
+    "    for i in range(1,which_InterpCounter):\n",
     "        file.write(\"    if(InterpCounter==\"+str(i)+\") { snprintf(gf_name,100,\\\"\"+gf_interp_list[i].description+\"\\\"); return; }\\n\")\n",
     "    file.write(\"    printf(\\\"Error. InterpCounter = %d unsupported. I should not be here.\\\\n\\\",InterpCounter); exit(1);\\n\")\n",
     "    file.write(\"}\\n\")\n",
     "\n",
     "with open(\"interp_sph_grids_ETK/src/get_interp_order.h\", \"w\") as file:\n",
     "    file.write(\"int get_interp_order(const int InterpCounter) {\\n\")\n",
-    "    for i in range(which_InterpCounter):\n",
+    "    for i in range(1,which_InterpCounter):\n",
     "        file.write(\"    if(InterpCounter==\"+str(i)+\") return \"+gf_interp_list[i].order+\";\\n\")\n",
     "    file.write(\"}\\n\")"
    ]
@@ -886,8 +887,7 @@
    "outputs": [],
    "source": [
     "with open(\"interp_sph_grids_ETK/src/define_NumInterpFunctions.h\", \"w\") as file:\n",
-    "    # Zero-offset array -> Start at which_InterpCounter-1 :\n",
-    "    file.write(\"#define NumInterpFunctions \"+str(which_InterpCounter-1)+\"\\n\") "
+    "    file.write(\"#define NumInterpFunctions \"+str(which_InterpCounter)+\"\\n\") "
    ]
   },
   {
@@ -932,19 +932,27 @@
     "  DECLARE_CCTK_PARAMETERS;\n",
     "\n",
     "  if(cctk_iteration == interp_out_iteration) {\n",
-    "    *InterpCounter = NumInterpFunctions;\n",
-    "    if(verbose==2) printf(\"interp_sph_grids_ETK: Just set InterpCounter to %d == NumInterpFunctions\\n\",\n",
+    "    *InterpCounter = 1;\n",
+    "    if(verbose==2) printf(\"interp_sph_grids_ETK: Just set InterpCounter to %d ; ready to start looping over interpolated gridfunctions!\\n\",\n",
     "                          *InterpCounter);\n",
     "  }\n",
     "}\n",
     "\n",
-    "void SphGrid_DecrementInterpCounter(CCTK_ARGUMENTS)\n",
+    "// This function increments InterpCounter if we are at the interp_out_iteration until\n",
+    "// it hits NumInterpFunctions. At this iteration, InterpCounter is set to zero, which\n",
+    "// exits the loop.\n",
+    "void SphGrid_IncrementInterpCounter(CCTK_ARGUMENTS)\n",
     "{\n",
     "  DECLARE_CCTK_ARGUMENTS;\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
     "\n",
-    "    (*InterpCounter)--;\n",
-    "    if(verbose==2) printf(\"interp_sph_grids_ETK: Just decremented InterpCounter to %d\\n\",*InterpCounter);\n",
+    "    if(*InterpCounter == NumInterpFunctions) {\n",
+    "        *InterpCounter = 0;\n",
+    "        if(verbose==2) printf(\"interp_sph_grids_ETK: Finished! Just zeroed InterpCounter.\\n\");\n",
+    "    } else {\n",
+    "        (*InterpCounter)++;\n",
+    "        if(verbose==2) printf(\"interp_sph_grids_ETK: Just incremented InterpCounter to %d\\n\",*InterpCounter);\n",
+    "    }\n",
     "}"
    ]
   },
@@ -1239,11 +1247,11 @@
     "  LANG: C\n",
     "} \"Perform interpolation and output result to file.\"\n",
     "#######\n",
-    "SCHEDULE SphGrid_DecrementInterpCounter in SphGrid_InterpGroup after Interpolate_to_sph_grid_main_function\n",
+    "SCHEDULE SphGrid_IncrementInterpCounter in SphGrid_InterpGroup after Interpolate_to_sph_grid_main_function\n",
     "{\n",
     "  LANG: C\n",
     "  OPTIONS: GLOBAL\n",
-    "} \"Decrement InterpCounter variable\"\n",
+    "} \"Increment InterpCounter variable, or set to zero once loop is complete.\"\n",
     "##################"
    ]
   }
