Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids: fix boldface.

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -92,7 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/src/Interpolate_to_sph_grid.h\n"
+      "Writing interp_sph_grids_ETK/src/Interpolate_to_sph_grid.h\n"
      ]
     }
    ],
@@ -245,7 +245,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/src/Set_up_interp_points_on_sph_grid.h\n"
+      "Writing interp_sph_grids_ETK/src/Set_up_interp_points_on_sph_grid.h\n"
      ]
     }
    ],
@@ -307,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/src/output_to_file.h\n"
+      "Writing interp_sph_grids_ETK/src/output_to_file.h\n"
      ]
     }
    ],
@@ -386,7 +386,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/src/main_function.cc\n"
+      "Writing interp_sph_grids_ETK/src/main_function.cc\n"
      ]
     }
    ],
@@ -433,7 +433,7 @@
     "  int order = get_interp_order(*InterpCounter);\n",
     "  char gf_name[100];\n",
     "  get_gf_name(*InterpCounter,gf_name);\n",
-    "  printf(\"Interpolating\\\\033[1m %s \\\\033[0m... using interpolation order = %d\\n\",gf_name,order);\n",
+    "  printf(\"Interpolating\\033[1m %s \\033[0m... using interpolation order = %d\\n\",gf_name,order);\n",
     "  Interpolate_to_sph_grid(cctkGH, N0*N1*N2, order,\n",
     "                             points_x,points_y,points_z, input_array_names, output_f);\n",
     "\n",
@@ -796,7 +796,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/src/construct_function_to_interpolate__store_to_interped_gf.cc\n"
+      "Writing interp_sph_grids_ETK/src/construct_function_to_interpolate__store_to_interped_gf.cc\n"
      ]
     }
    ],
@@ -899,7 +899,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/src/interp_counter.cc\n"
+      "Writing interp_sph_grids_ETK/src/interp_counter.cc\n"
      ]
     }
    ],
@@ -986,7 +986,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/src/make.code.defn\n"
+      "Writing interp_sph_grids_ETK/src/make.code.defn\n"
      ]
     }
    ],
@@ -1018,7 +1018,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/interface.ccl\n"
+      "Writing interp_sph_grids_ETK/interface.ccl\n"
      ]
     }
    ],
@@ -1076,7 +1076,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/param.ccl\n"
+      "Writing interp_sph_grids_ETK/param.ccl\n"
      ]
     }
    ],
@@ -1198,7 +1198,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting interp_sph_grids_ETK/schedule.ccl\n"
+      "Writing interp_sph_grids_ETK/schedule.ccl\n"
      ]
     }
    ],
