Fixed a bug preventing compilation of the GiRaFFE thorns.

--- a/Tutorial-ETK_thorn-GiRaFFEFood_HO.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFEFood_HO.ipynb
@@ -138,7 +138,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing GiRaFFEFood_HO/src/InitialData.c\n"
+      "Overwriting GiRaFFEFood_HO/src/InitialData.c\n"
      ]
     }
    ],
@@ -152,6 +152,7 @@
     "#include \"cctk_Arguments.h\"\n",
     "void GiRaFFE_set_A_v(const cGH* restrict const cctkGH,const int *cctk_lsh,const int *cctk_nghostzones,\n",
     "                     const CCTK_REAL *xGF,const CCTK_REAL *yGF,const CCTK_REAL *zGF,const CCTK_REAL *u0GF,\n",
+    "                     const CCTK_REAL *gammaDD00GF,const CCTK_REAL *gammaDD01GF,const CCTK_REAL *gammaDD02GF,const CCTK_REAL *gammaDD11GF,const CCTK_REAL *gammaDD12GF,const CCTK_REAL *gammaDD22GF,\n",
     "                     CCTK_REAL *AD0GF,CCTK_REAL *AD1GF,CCTK_REAL *AD2GF,\n",
     "                     CCTK_REAL *ValenciavU0GF,CCTK_REAL *ValenciavU1GF,CCTK_REAL *ValenciavU2GF) {\n",
     "\n",
@@ -200,6 +201,7 @@
     "  \n",
     "  GiRaFFE_set_A_v(cctkGH,cctk_lsh,cctk_nghostzones,\n",
     "                  x,y,z,u0,\n",
+    "                  gammaUU00,gammaUU01,gammaUU02,gammaUU11,gammaUU12,gammaUU22,\n",
     "                  AD0,AD1,AD2,\n",
     "                  ValenciavU0,ValenciavU1,ValenciavU2);\n",
     "\n",
@@ -234,7 +236,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing GiRaFFEFood_HO/interface.ccl\n"
+      "Overwriting GiRaFFEFood_HO/interface.ccl\n"
      ]
     }
    ],
@@ -262,7 +264,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing GiRaFFEFood_HO/param.ccl\n"
+      "Overwriting GiRaFFEFood_HO/param.ccl\n"
      ]
     }
    ],
@@ -308,7 +310,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing GiRaFFEFood_HO/schedule.ccl\n"
+      "Overwriting GiRaFFEFood_HO/schedule.ccl\n"
      ]
     }
    ],
@@ -368,7 +370,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing GiRaFFEFood_HO/src/make.code.defn\n"
+      "Overwriting GiRaFFEFood_HO/src/make.code.defn\n"
      ]
     }
    ],
