Added a function to set gammaUU and gammadet before trying to access them.

--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "#### Table of Contents:\n",
     "1. [Call on NRPy+ to convert the SymPy expressions for the evolution equations and A-to-B into one C-code kernel for each.](#step1)\n",
-    "    1. [Step 1.1: Import NRPy+ core modules and the GiRaFFE module](#step1)\n",
+    "    1. [Step 1.1: Import NRPy+ core modules and the GiRaFFE module](#step1.1)\n",
     "    1. [Step 1.2: Create the C code output kernel.](#step1.2)\n",
     "    1. [Steps 1.3-1.5: Writing to file](#step1.3)\n",
     "    1. [Step 1.6: The A-to-B driver](#step1.6)\n",
@@ -43,10 +43,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: Call on NRPy+ to convert the SymPy expressions for the evolution equations and A-to-B into one C-code kernel for each. \n",
     "<a id='step1'></a>\n",
+    "## Step 1: Call on NRPy+ to convert the SymPy expressions for the evolution equations and A-to-B into one C-code kernel for each. \n",
     "\\[Back to [top](#top)\\]\n",
+    "<a id='step1.1'></a>\n",
     "### Step 1.1: Import NRPy+ core modules and the GiRaFFE module\n",
+    "\\[Back to [top](#top)\\]\n",
     "We start by importing the core NRPy+ modules we need and setting commonly used parameters. Since we are writing an ETK thorn, we'll need to set \"grid::GridFuncMemAccess\" to \"ETK\". We will then import the GiRaFFE_Higher_Order.py module we previously created and run its main function to generate the SymPy for the expressions we want."
    ]
   },
@@ -92,7 +94,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 2: Create the C code output kernel.\n",
     "Prereqs_to_print = [\\\n",
@@ -113,10 +123,20 @@
     "                   lhrh(lhs=gri.gfaccess(\"out_gfs\",\"gammaUU02\"),rhs=gho.gammaUU[0][2]),\\\n",
     "                   lhrh(lhs=gri.gfaccess(\"out_gfs\",\"gammaUU11\"),rhs=gho.gammaUU[1][1]),\\\n",
     "                   lhrh(lhs=gri.gfaccess(\"out_gfs\",\"gammaUU12\"),rhs=gho.gammaUU[1][2]),\\\n",
-    "                   lhrh(lhs=gri.gfaccess(\"out_gfs\",\"gammaUU22\"),rhs=gho.gammaUU[2][1]),\\\n",
+    "                   lhrh(lhs=gri.gfaccess(\"out_gfs\",\"gammaUU22\"),rhs=gho.gammaUU[2][2]),\\\n",
     "                   lhrh(lhs=gri.gfaccess(\"out_gfs\",\"gammadet\"),rhs=gho.gammadet),\\\n",
     "                   ]\n",
     "\n",
+    "metric_quantities_to_print = [\\\n",
+    "                              lhrh(lhs=gri.gfaccess(\"out_gfs\",\"gammaUU00\"),rhs=gho.gammaUU[0][0]),\\\n",
+    "                              lhrh(lhs=gri.gfaccess(\"out_gfs\",\"gammaUU01\"),rhs=gho.gammaUU[0][1]),\\\n",
+    "                              lhrh(lhs=gri.gfaccess(\"out_gfs\",\"gammaUU02\"),rhs=gho.gammaUU[0][2]),\\\n",
+    "                              lhrh(lhs=gri.gfaccess(\"out_gfs\",\"gammaUU11\"),rhs=gho.gammaUU[1][1]),\\\n",
+    "                              lhrh(lhs=gri.gfaccess(\"out_gfs\",\"gammaUU12\"),rhs=gho.gammaUU[1][2]),\\\n",
+    "                              lhrh(lhs=gri.gfaccess(\"out_gfs\",\"gammaUU22\"),rhs=gho.gammaUU[2][2]),\\\n",
+    "                              lhrh(lhs=gri.gfaccess(\"out_gfs\",\"gammadet\"),rhs=gho.gammadet),\\\n",
+    "                             ]\n",
+    "print()\n",
     "# To best format this for the ETK, we'll need to register these gridfunctions.\n",
     "Stilde_rhsD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"Stilde_rhsD\")\n",
     "A_rhsD = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"A_rhsD\")\n",
@@ -133,6 +153,7 @@
     "\n",
     "Prereqs_CKernel = fin.FD_outputC(\"returnstring\",Prereqs_to_print,params=\"outCverbose=False\")\n",
     "Prereqs_CKernel = \"const double u0 = u0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\n\" + Prereqs_CKernel\n",
+    "metric_quantities_CKernel = fin.FD_outputC(\"returnstring\",metric_quantities_to_print,params=\"outCverbose=False\")\n",
     "Conservs_CKernel = fin.FD_outputC(\"returnstring\",Conservs_to_print,params=\"outCverbose=False\")\n",
     "Conservs_CKernel = \"const double u0 = u0GF[CCTK_GFINDEX3D(cctkGH, i0,i1,i2)];\\n\" + Conservs_CKernel\n",
     "\n",
@@ -140,6 +161,11 @@
     "                           [\"cctk_lsh[2]\",\"cctk_lsh[1]\",\"cctk_lsh[0]\"],\\\n",
     "                           [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
     "                           Prereqs_CKernel.replace(\"time\",\"cctk_time\"))\n",
+    "\n",
+    "metric_quantities_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],\\\n",
+    "                                     [\"cctk_lsh[2]\",\"cctk_lsh[1]\",\"cctk_lsh[0]\"],\\\n",
+    "                                     [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
+    "                                     metric_quantities_CKernel.replace(\"time\",\"cctk_time\"))\n",
     "\n",
     "Conservs_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"cctk_nghostzones[2]\",\"cctk_nghostzones[1]\",\"cctk_nghostzones[0]\"],\\\n",
     "                            [\"cctk_lsh[2]-cctk_nghostzones[2]\",\"cctk_lsh[1]-cctk_nghostzones[1]\",\\\n",
@@ -172,6 +198,9 @@
     "# Step 4: Write the C code kernel to file.\n",
     "with open(\"GiRaFFE_HO/src/Prereqs.h\", \"w\") as file:\n",
     "    file.write(str(Prereqs_looped))\n",
+    "\n",
+    "with open(\"GiRaFFE_HO/src/metric_quantities.h\", \"w\") as file:\n",
+    "    file.write(str(metric_quantities_looped))\n",
     "\n",
     "with open(\"GiRaFFE_HO/src/Conservs.h\", \"w\") as file:\n",
     "    file.write(str(Conservs_looped))\n",
@@ -336,12 +365,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 2: Interfacing with the Einstein Toolkit\n",
     "<a id='step2'></a>\n",
+    "### Step 2: Interfacing with the Einstein Toolkit\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
-    "#### Step 2a: Constructing the Einstein Toolkit C-code calling functions that include the C code kernels.\n",
     "<a id='step2a'></a>\n",
+    "#### Step 2a: Constructing the Einstein Toolkit C-code calling functions that include the C code kernels.\n",
+    "\\[Back to [top](#top)\\]\n",
     "\n",
     "Now that we have generated the C code kernel *GiRaFFE_RHSs.h* and the parameters file *NRPy_params.h*, we will need to write C code to make use of these files. To do this, we can simply follow the example within the [IDScalarWaveNRPy tutorial module](Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb). Functions defined by these files will be called by the Einstein Toolkit scheduler (specified in schedule.ccl below).\n",
     "\n",
@@ -380,6 +410,12 @@
     "const int NUL     = +0;\n",
     "const int MINFACE = +1;\n",
     "\n",
+    "/* TODO: Start using this to directly interface with HydroBase!\n",
+    "*CCTK_REAL *Bvec0,*Bvec1,*Bvec2;\n",
+    "*Bvec0 = &Bvec[0*cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2]];\n",
+    "*Bvec1 = &Bvec[1*cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2]];\n",
+    "*Bvec2 = &Bvec[2*cctk_lsh[0]*cctk_lsh[1]*cctk_lsh[2]];\n",
+    "*/\n",
     "\n",
     "// Declare boundary condition FACE_UPDATE function,\n",
     "// which fills in the ghost zones with successively\n",
@@ -774,6 +810,14 @@
     "#include \"GiRaFFE_headers.h\"\n",
     "//#include \"inlined_functions.C\"\n",
     "\n",
+    "void GiRaFFE_HO_update_metric_det_inverse(const cGH* restrict const cctkGH,const int *cctk_lsh,const int *cctk_nghostzones,\n",
+    "                                          const CCTK_REAL *gammaDD00GF,const CCTK_REAL *gammaDD01GF,const CCTK_REAL *gammaDD02GF,const CCTK_REAL *gammaDD11GF,const CCTK_REAL *gammaDD12GF,const CCTK_REAL *gammaDD22GF,\n",
+    "                                          CCTK_REAL *gammaUU00GF,CCTK_REAL *gammaUU01GF,CCTK_REAL *gammaUU02GF,CCTK_REAL *gammaUU11GF,CCTK_REAL *gammaUU12GF,CCTK_REAL *gammaUU22GF,CCTK_REAL *gammadetGF) {\n",
+    "\n",
+    "#include \"metric_quantities.h\"\n",
+    "\n",
+    "}\n",
+    "\n",
     "extern \"C\" void GiRaFFE_HO_conserv_to_prims_FFE(CCTK_ARGUMENTS) {\n",
     "  DECLARE_CCTK_ARGUMENTS;\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
@@ -789,6 +833,11 @@
     "  CCTK_REAL error_int_numer=0,error_int_denom=0;\n",
     "\n",
     "  CCTK_INT num_vel_limits=0,num_vel_nulls_current_sheet=0;\n",
+    "\n",
+    "  GiRaFFE_HO_update_metric_det_inverse(cctkGH,cctk_lsh,cctk_nghostzones,\n",
+    "                                       gxx, gxy, gxz, gyy, gyz, gzz,\n",
+    "                                       gammaUU00,gammaUU01,gammaUU02,gammaUU11,gammaUU12,gammaUU22,gammadet);\n",
+    "\n",
     "#pragma omp parallel for reduction(+:error_int_numer,error_int_denom,num_vel_limits,num_vel_nulls_current_sheet) schedule(static)\n",
     "  for(int k=kmin;k<kmax;k++)\n",
     "    for(int j=jmin;j<jmax;j++)\n",
@@ -1397,9 +1446,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='step2b'></a>\n",
     "#### Step 2b: CCL files - Define how this module interacts and interfaces with the larger Einstein Toolkit infrastructure\n",
     "\\[Back to [top](#top)\\]\n",
-    "<a id='step2b'></a>\n",
     "\n",
     "Writing a module (\"thorn\") within the Einstein Toolkit requires that three \"ccl\" files be constructed, all in the root directory of the thorn:\n",
     "\n",
@@ -1425,7 +1474,7 @@
     "%%writefile GiRaFFE_HO/interface.ccl\n",
     "implements: GiRaFFE_HO\n",
     "\n",
-    "inherits: admbase HydroBase Boundary grid\n",
+    "inherits: admbase HydroBase Boundary grid Tmunubase\n",
     "\n",
     "USES INCLUDE: loopcontrol.h\n",
     "USES INCLUDE: Symmetry.h\n",
@@ -1622,23 +1671,6 @@
     "  OPTIONS: global\n",
     "} \"Schedule symmetries\"\n",
     "\n",
-    "schedule driver_A_to_B as driver_A_to_B IN MoL_CalcRHS\n",
-    "{\n",
-    "  LANG: C\n",
-    "  READS: admbase::gxx(Everywhere)\n",
-    "  READS: admbase::gxy(Everywhere)\n",
-    "  READS: admbase::gxz(Everywhere)\n",
-    "  READS: admbase::gyy(Everywhere)\n",
-    "  READS: admbase::gyz(Everywhere)\n",
-    "  READS: admbase::gzz(Everywhere)\n",
-    "  READS: GiRaFFE_HO::AD0(Everywhere)\n",
-    "  READS: GiRaFFE_HO::AD1(Everywhere)\n",
-    "  READS: GiRaFFE_HO::AD2(Everywhere)\n",
-    "  WRITES: GiRaFFE_HO::BU0(Everywhere)\n",
-    "  WRITES: GiRaFFE_HO::BU1(Everywhere)\n",
-    "  WRITES: GiRaFFE_HO::BU2(Everywhere)\n",
-    "} \"Calculates the B-field from the vector potential\"\n",
-    "\n",
     "schedule GiRaFFE_HO_set_prereqs as GiRaFFE_HO_set_prereqs IN MoL_CalcRHS after driver_A_to_B\n",
     "{\n",
     "  LANG: C\n",
@@ -1742,6 +1774,23 @@
     "{\n",
     "} \"Apply boundary conditions\"\n",
     "\n",
+    "schedule driver_A_to_B as driver_A_to_B IN MoL_PostStep after GiRaFFE_HO_SelectBCs\n",
+    "{\n",
+    "  LANG: C\n",
+    "  READS: admbase::gxx(Everywhere)\n",
+    "  READS: admbase::gxy(Everywhere)\n",
+    "  READS: admbase::gxz(Everywhere)\n",
+    "  READS: admbase::gyy(Everywhere)\n",
+    "  READS: admbase::gyz(Everywhere)\n",
+    "  READS: admbase::gzz(Everywhere)\n",
+    "  READS: GiRaFFE_HO::AD0(Everywhere)\n",
+    "  READS: GiRaFFE_HO::AD1(Everywhere)\n",
+    "  READS: GiRaFFE_HO::AD2(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::BU0(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::BU1(Everywhere)\n",
+    "  WRITES: GiRaFFE_HO::BU2(Everywhere)\n",
+    "} \"Calculates the B-field from the vector potential\"\n",
+    "\n",
     "schedule GiRaFFE_HO_RegisterVars in MoL_Register\n",
     "{\n",
     "  LANG: C\n",
@@ -1749,7 +1798,7 @@
     "} \"Register Variables for MoL\"\n",
     "\n",
     "# Nontrivial primitives solve, for vx,vy,vz:\n",
-    "schedule GiRaFFE_HO_conserv_to_prims_FFE in GiRaFFE_PostPostInitial after driver_A_to_B\n",
+    "schedule GiRaFFE_HO_conserv_to_prims_FFE in AddToTmunu after driver_A_to_B\n",
     "{\n",
     "  LANG: C\n",
     "} \"Applies the FFE condition B^2>E^2 and recomputes the velocities\"\n",
