--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -384,22 +384,22 @@
     "for i in range(DIM):\n",
     "    u4U[i+1] = uU[i]\n",
     "\n",
-    "# Step 5b: Build TEMUU itself\n",
-    "TEMUU = ixp.zerorank2(DIM=4)\n",
+    "# Step 5b: Build T4EMUU itself\n",
+    "T4EMUU = ixp.zerorank2(DIM=4)\n",
     "for mu in range(4):\n",
     "    for nu in range(4):\n",
     "        # Term 1: \\underbrace{b^2 u^{\\mu} u^{\\nu}}\n",
-    "        TEMUU[mu][nu] = smallb2*u4U[mu]*u4U[nu]\n",
+    "        T4EMUU[mu][nu] = smallb2*u4U[mu]*u4U[nu]\n",
     "\n",
     "for mu in range(4):\n",
     "    for nu in range(4):\n",
     "        # Term 2: \\frac{b^2}{2} g^{\\mu \\nu}\n",
-    "        TEMUU[mu][nu] += smallb2*g4UU[mu][nu]/2\n",
+    "        T4EMUU[mu][nu] += smallb2*g4UU[mu][nu]/2\n",
     "\n",
     "for mu in range(4):\n",
     "    for nu in range(4):\n",
     "        # Term 3: b^{\\mu} b^{\\nu}\n",
-    "        TEMUU[mu][nu] += -smallb4U[mu]*smallb4U[nu]"
+    "        T4EMUU[mu][nu] += -smallb4U[mu]*smallb4U[nu]"
    ]
   },
   {
@@ -458,7 +458,7 @@
    "outputs": [],
    "source": [
     "# Step 6: Derivatives of the electromagnetic stress-energy tensor\n",
-    "# Step 6a: Declare gridfunctions and their derivatives that will be useful for TEMUD_dD\n",
+    "# Step 6a: Declare gridfunctions and their derivatives that will be useful for TEMUD_dD_contracted\n",
     "# We already handled the ADMBase variables' derivatives when we built g4DDdD.\n",
     "# That leaves the valencia 3 velocity and tilde B field.\n",
     "ValenciavU_dD = ixp.declarerank2(\"ValenciavU_dD\",\"nosym\")\n",
@@ -690,14 +690,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 6e: Construct TEMUD_dD itself\n",
+    "# Step 6e: Construct TEMUD_dD_contracted itself\n",
     "# We will only set the divergence-like components that we need.\n",
     "# Step 6e.i\n",
-    "TEMUD_dD = ixp.zerorank3()\n",
+    "TEMUD_dD_contracted = ixp.zerorank1()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
-    "            TEMUD_dD[j][i][j] += gammaDD_dD[k][i][j] * TEMUU[k+1][j+1]\n"
+    "            TEMUD_dD_contracted[i] += gammaDD_dD[k][i][j] * T4EMUU[k+1][j+1]\n"
    ]
   },
   {
@@ -718,31 +718,31 @@
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            # Term 2a: \\gamma_{ki} b^2 u^j_{,j} u^k\n",
-    "            TEMUD_dD[j][i][j] += gammaDD[k][i]*smallb2*uU_dD[j][j]*uU[k]\n",
+    "            TEMUD_dD_contracted[i] += gammaDD[k][i]*smallb2*uU_dD[j][j]*uU[k]\n",
     "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            # Term 2b: \\gamma_{ki} b^2 u^j u^k_{,j}\n",
-    "            TEMUD_dD[j][i][j] += gammaDD[k][i]*smallb2*uU[j]*uU_dD[k][j]\n",
+    "            TEMUD_dD_contracted[i] += gammaDD[k][i]*smallb2*uU[j]*uU_dD[k][j]\n",
     "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            # Term 2c: \\gamma_{ki} \\frac{b^2}{2} g^{jk}_{\\ ,j}\n",
-    "            TEMUD_dD[j][i][j] += gammaDD[k][i]*smallb2*gSpatialUU_dD[j][k][j]/2\n",
+    "            TEMUD_dD_contracted[i] += gammaDD[k][i]*smallb2*gSpatialUU_dD[j][k][j]/2\n",
     "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            # Term 2d: \\gamma_{ki} b^j_{,j} b^k\n",
-    "            TEMUD_dD[j][i][j] += gammaDD[k][i]*smallbU_dD[j][j]*smallb4U[k+1]\n",
+    "            TEMUD_dD_contracted[i] += gammaDD[k][i]*smallbU_dD[j][j]*smallb4U[k+1]\n",
     "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            # Term 2e: \\gamma_{ki} b^j b^k_{,j}\n",
-    "            TEMUD_dD[j][i][j] += gammaDD[k][i]*smallb4U[j+1]*smallbU_dD[k][j]\n"
+    "            TEMUD_dD_contracted[i] += gammaDD[k][i]*smallb4U[j+1]*smallbU_dD[k][j]\n"
    ]
   },
   {
@@ -764,14 +764,14 @@
     "        for k in range(DIM):\n",
     "            for l in range(DIM):\n",
     "                # Term 3a: 2 b_l b^l_{,j} \\gamma_{ki} u^j u^k\n",
-    "                TEMUD_dD[j][i][j] += 2*smallb4D[l+1]*smallbU_dD[l][j]*gammaDD[k][i]*uU[j]*uU[k]\n",
+    "                TEMUD_dD_contracted[i] += 2*smallb4D[l+1]*smallbU_dD[l][j]*gammaDD[k][i]*uU[j]*uU[k]\n",
     "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            for l in range(DIM):\n",
     "                # Term 3b: b_l b^l_{,j} \\gamma_{ki} g^{jk}\n",
-    "                TEMUD_dD[j][i][j] += smallb4D[l+1]*smallbU_dD[l][j]*gammaDD[k][i]*g4UU[j+1][k+1]\n"
+    "                TEMUD_dD_contracted[i] += smallb4D[l+1]*smallbU_dD[l][j]*gammaDD[k][i]*g4UU[j+1][k+1]\n"
    ]
   },
   {
@@ -794,7 +794,7 @@
     "            for l in range(DIM):\n",
     "                for m in range(DIM):\n",
     "                    # Term 4a: \\gamma_{ki} \\gamma_{lm,j} b^l b^m u^j u^k\n",
-    "                    TEMUD_dD[j][i][j] += gammaDD[k][i]*gammaDD_dD[l][m][j]*smallb4U[l+1]*smallb4U[m+1]*uU[j]*uU[k]\n",
+    "                    TEMUD_dD_contracted[i] += gammaDD[k][i]*gammaDD_dD[l][m][j]*smallb4U[l+1]*smallb4U[m+1]*uU[j]*uU[k]\n",
     "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
@@ -802,7 +802,7 @@
     "            for l in range(DIM):\n",
     "                for m in range(DIM):\n",
     "                    # Term 4b: \\gamma_{ki} \\gamma_{lm,j} b^l b^m \\frac{1}{2} g^{jk}\n",
-    "                    TEMUD_dD[j][i][j] += gammaDD[k][i]*gammaDD_dD[l][m][j]*smallb4U[l+1]*smallb4U[m+1]*g4UU[j+1][k+1]\n"
+    "                    TEMUD_dD_contracted[i] += gammaDD[k][i]*gammaDD_dD[l][m][j]*smallb4U[l+1]*smallb4U[m+1]*g4UU[j+1][k+1]\n"
    ]
   },
   {
@@ -841,18 +841,17 @@
     "for i in range(DIM):\n",
     "    for mu in range(4):\n",
     "        for nu in range(4):\n",
-    "            Stilde_rhsD[i] += alpsqrtgam * TEMUU[mu][nu] * g4DDdD[mu][nu][i+1] / 2\n",
+    "            Stilde_rhsD[i] += alpsqrtgam * T4EMUU[mu][nu] * g4DDdD[mu][nu][i+1] / 2\n",
     "\n",
     "# The second term: \\alpha \\sqrt{\\gamma} \\partial_j T^j_{{\\rm EM} i}\n",
     "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        Stilde_rhsD[i] += -alpsqrtgam * TEMUD_dD[j][i][j]\n",
+    "    Stilde_rhsD[i] += -alpsqrtgam * TEMUD_dD_contracted[i]\n",
     "\n",
     "# The third term: \\gamma_{ik} T^{kj}_{\\rm EM} \\partial_j (\\alpha \\sqrt{\\gamma})\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
-    "            Stilde_rhsD[i] += -gammaDD[i][k]*TEMUU[k][j]*alpsqrtgam_dD[j]\n"
+    "            Stilde_rhsD[i] += -gammaDD[i][k]*T4EMUU[k][j]*alpsqrtgam_dD[j]\n"
    ]
   },
   {
