--- a/Tutorial-GiRaFFEFood_HO.ipynb
+++ b/Tutorial-GiRaFFEFood_HO.ipynb
@@ -5,16 +5,14 @@
    "metadata": {},
    "source": [
     "<a id='top'></a>\n",
-    "$\\newcommand{\\giraffe}{\\texttt{GiRaFFE}}$\n",
-    "$\\newcommand{\\gf}{\\texttt{GiRaFFEFood}}$\n",
-    "# $\\gf$: Initial data for $\\giraffe$\n",
+    "# $\\texttt{GiRaFFEfood}$: Initial data for $\\texttt{GiRaFFE}$\n",
     "\n",
-    "With the $\\giraffe$ evolution thorn constructed, we now need to \"feed\" our giraffe with initial data to evolve. While there are several different choices of initial data we can use here, for the moment, we will only be implementing the \"Exact Wald\" initial data, given by Table 3 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf):\n",
+    "With the $\\texttt{GiRaFFE}$ evolution thorn constructed, we now need to \"feed\" our giraffe with initial data to evolve. While there are several different choices of initial data we can use here, for the moment, we will only be implementing the \"Exact Wald\" initial data, given by Table 3 in [the original paper](https://arxiv.org/pdf/1704.00599.pdf):\n",
     "\\begin{align}\n",
     "A_{\\phi} &= \\frac{C_0}{2} r^2 \\sin^2 \\theta \\\\\n",
     "E_{\\phi} &= 2 M C_0 \\left( 1+ \\frac {2M}{r} \\right)^{-1/2} \\sin^2 \\theta \\\\\n",
     "\\end{align}\n",
-    "(the unspecified components are set to 0). Here, $C_0$ is a constant that we will set to $1$ in our simulations. Now, to use this initial data scheme, we need to transform the above into the quantities actually tracked by $\\giraffe$ and HydroBase: $A_i$, $B^i$, $\\tilde{S}_i$, $v^i$, and $\\Phi$. Of these quantities, $\\gf$ will only set $A_i$, $v^i$, and $\\Phi=0$; $\\giraffe$ itself will call functions to set $B^i$ and $\\tilde{S}_i$ before the time-evolution begins. This can be done with eqs. 16 and 18, here given in that same order:\n",
+    "(the unspecified components are set to 0). Here, $C_0$ is a constant that we will set to $1$ in our simulations. Now, to use this initial data scheme, we need to transform the above into the quantities actually tracked by $\\texttt{GiRaFFE}$ and HydroBase: $A_i$, $B^i$, $\\tilde{S}_i$, $v^i$, and $\\Phi$. Of these quantities, $\\texttt{GiRaFFEfood}$ will only set $A_i$, $v^i$, and $\\Phi=0$; $\\texttt{GiRaFFE}$ itself will call functions to set $B^i$ and $\\tilde{S}_i$ before the time-evolution begins. This can be done with eqs. 16 and 18, here given in that same order:\n",
     "\\begin{align}\n",
     "v^i &= \\alpha \\frac{\\epsilon^{ijk} E_j B_k}{B^2} -\\beta^i \\\\\n",
     "B^i &= \\frac{[ijk]}{\\sqrt{\\gamma}} \\partial_j A_k \\\\\n",
@@ -94,15 +92,15 @@
    "outputs": [],
    "source": [
     "# Step 2: Set the vectors A and E in Spherical coordinates\n",
-    "AsphD = ixp.zerorank1()\n",
-    "EsphD = ixp.zerorank1()\n",
     "\n",
-    "# The r and theta components (0 and 1) are now 0\n",
     "r     = rfm.xxSph[0]\n",
     "theta = rfm.xxSph[1]\n",
     "\n",
     "IDchoice = par.parval_from_str(\"IDchoice\")\n",
     "\n",
+    "# Initialize all components of A and E in the *spherical basis* to zero\n",
+    "AsphD = ixp.zerorank1()\n",
+    "EsphD = ixp.zerorank1()\n",
     "if IDchoice is \"Exact_Wald\":\n",
     "    AsphD[2] = (r * r * sp.sin(theta)**2)/2\n",
     "    EsphD[2] = 2 * M * sp.sin(theta)**2 / sp.sqrt(1+2*M/r)\n",
@@ -146,7 +144,7 @@
     "alpha   = gri.register_gridfunctions(\"AUX\",\"alpha\")\n",
     "betaU   = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"betaU\",DIM=3)\n",
     "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"gammaDD\", \"sym01\",DIM=3)\n",
-    "gammaUU, gammadet = ixp.symm_matrix_inverter3x3(gammaDD)\n"
+    "gammaUU, gammadet = ixp.symm_matrix_inverter3x3(gammaDD)"
    ]
   },
   {
@@ -236,7 +234,7 @@
     "### Step 5: NRPy+ Module Code Validation\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
-    "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\giraffe$ Exact Wald initial data equations  we intend to use between\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ Exact Wald initial data equations  we intend to use between\n",
     "1. this tutorial and \n",
     "2. the NRPy+ [GiRaFFEFood_HO.py](../edit/GiRaFFEFood_HO/GiRaFFEFood_HO.py) module.\n"
    ]
@@ -250,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vvv Ignore the minor warning below. vvv\n",
+      "vvv Ignore the minor warnings below. vvv\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::M_PI\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmin\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::xmax\n",
@@ -261,14 +259,14 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEFood_HO::IDchoice\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEFood_HO::M\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEFood_HO::M_PI\n",
-      "^^^ Ignore the minor warning above. ^^^\n",
+      "^^^ Ignore the minor warnings above. ^^^\n",
       "\n",
       "Consistency check between GiRaFFEFood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
       "ValenciavU[0] - gfho.ValenciavU[0] = 0\n",
       "AD[0] - gfho.AD[0] = 0\n",
       "ValenciavU[1] - gfho.ValenciavU[1] = 0\n",
       "AD[1] - gfho.AD[1] = 0\n",
-      "ValenciavU[2] - gfho.ValenciavU[2] = -2*M*gammaDD02*xx0*(-xx2**2/(xx0**2 + xx1**2 + xx2**2) + 1)/(gammaDD22*(xx0**2 + xx1**2)*sqrt(2*M/sqrt(xx0**2 + xx1**2 + xx2**2) + 1)) - 2*M*gammaDD12*xx1*(-xx2**2/(xx0**2 + xx1**2 + xx2**2) + 1)/(gammaDD22*(xx0**2 + xx1**2)*sqrt(2*M/sqrt(xx0**2 + xx1**2 + xx2**2) + 1))\n",
+      "ValenciavU[2] - gfho.ValenciavU[2] = 0\n",
       "AD[2] - gfho.AD[2] = 0\n"
      ]
     }
@@ -278,12 +276,12 @@
     "#   twice will spawn an error.\n",
     "gri.glb_gridfcs_list = []\n",
     "\n",
-    "print(\"vvv Ignore the minor warning below. vvv\")\n",
+    "print(\"vvv Ignore the minor warnings below. vvv\")\n",
     "\n",
     "import GiRaFFEFood_HO.GiRaFFEFood_HO as gfho\n",
     "gfho.GiRaFFEFood_HO()\n",
     "\n",
-    "print(\"^^^ Ignore the minor warning above. ^^^\\n\")\n",
+    "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
     "\n",
     "print(\"Consistency check between GiRaFFEFood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
