GiRaFFE: It's GiRaFFEfood, not GiRaFFEFood. Fix all.

--- a/Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFEfood_HO.ipynb
@@ -4,19 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\newcommand{\\giraffe}{\\texttt{GiRaFFE}}$\n",
-    "$\\newcommand{\\gf}{\\texttt{GiRaFFEFood}}$\n",
     "<a id='top'></a>\n",
-    "## $\\gf$: An Einstein Toolkit Initial Data Thorn for $\\giraffe$\n",
+    "## $\\texttt{GiRaFFEfood}$: An Einstein Toolkit Initial Data Thorn for $\\texttt{GiRaFFE}$\n",
     "\n",
-    "### NRPy+ Source Code for this module: [GiRaFFEFood_HO.py](../edit/GiRaFFEFood_HO.py) , which is fully documented in the [previous NRPy+ tutorial module](Tutorial-GiRaFFEFood_HO.ipynb) on using NRPy+ to construct these Exact Wald initial data as SymPy expressions.\n"
+    "### NRPy+ Source Code for this module: [GiRaFFEfood_HO.py](../edit/GiRaFFEfood_HO.py) , which is fully documented in the [previous NRPy+ tutorial module](Tutorial-GiRaFFEfood_HO.ipynb) on using NRPy+ to construct these Exact Wald initial data as SymPy expressions.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this part of the tutorial, we will construct an Einstein Toolkit (ETK) thorn (module) that will set up *initial data* for $\\giraffe$. In a [previous tutorial module](Tutorial-GiRaFFEFood_HO.ipynb), we used NRPy+ to contruct the SymPy expressions for Exact Wald initial data. \n",
+    "In this part of the tutorial, we will construct an Einstein Toolkit (ETK) thorn (module) that will set up *initial data* for $\\texttt{GiRaFFE}$. In a [previous tutorial module](Tutorial-GiRaFFEfood_HO.ipynb), we used NRPy+ to contruct the SymPy expressions for Exact Wald initial data. \n",
     "\n",
     "We will construct this thorn in two steps.\n",
     "\n",
@@ -26,7 +24,7 @@
     "This thorn requires Initial data to be set up in several stages.\n",
     "1. Run the shifted Kerr-Schild thorn to set up the four-metric we wish to use.\n",
     "1. (This module) Set up the four-vector potential $A_\\mu$ (which includes $\\Phi$ and $A_i$) and the Valencia 3-velocity.\n",
-    "1. Run the A-to-B driver from $\\giraffe$ to fill in the initial $B^i$ data.\n",
+    "1. Run the A-to-B driver from $\\texttt{GiRaFFE}$ to fill in the initial $B^i$ data.\n",
     "1. Run the Primitive-to-conservative solver to calculate $\\tilde{S}_i$.\n",
     "\n",
     "#### Table of Contents:\n",
@@ -43,13 +41,13 @@
     "<a id='step1'></a>\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
-    "After importing the core modules, we will set $\\text{GridFuncMemAccess}$ to $\\text{ETK}$. SymPy expressions for plane wave initial data are written inside [GiRaFFEFood_HO.py](../edit/GiRaFFEFood_HO.py), and we simply import them for use here.\n",
+    "After importing the core modules, we will set $\\text{GridFuncMemAccess}$ to $\\text{ETK}$. SymPy expressions for plane wave initial data are written inside [GiRaFFEfood_HO.py](../edit/GiRaFFEfood_HO.py), and we simply import them for use here.\n",
     "\n",
     "### Step 1.1: Import NRPy+ core modules and the GiRaFFE module\n",
     "<a id='step1.1'></a>\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
-    "We start by importing the core NRPy+ modules we need and setting commonly used parameters. Since we are writing an ETK thorn, we'll need to set \"grid::GridFuncMemAccess\" to \"ETK\". We will then import the GiRaFFEFood_HO.py module we previously created and run its main function to generate the SymPy for the expressions we want."
+    "We start by importing the core NRPy+ modules we need and setting commonly used parameters. Since we are writing an ETK thorn, we'll need to set \"grid::GridFuncMemAccess\" to \"ETK\". We will then import the GiRaFFEfood_HO.py module we previously created and run its main function to generate the SymPy for the expressions we want."
    ]
   },
   {
@@ -85,13 +83,13 @@
     "gri.xx[1] = y\n",
     "gri.xx[2] = z\n",
     "\n",
-    "import GiRaFFEFood_HO.GiRaFFEFood_HO as gfho\n",
-    "gfho.GiRaFFEFood_HO()\n",
+    "import GiRaFFEfood_HO.GiRaFFEfood_HO as gfho\n",
+    "gfho.GiRaFFEfood_HO()\n",
     "\n",
     "# Step 2: Create the C code output kernel.\n",
     "# To best format this for the ETK, we'll need to register this gridfunction.\n",
     "ValenciavU = ixp.register_gridfunctions_for_single_rank1(\"AUX\",\"ValenciavU\")\n",
-    "GiRaFFEFood_A_v_to_print = [\\\n",
+    "GiRaFFEfood_A_v_to_print = [\\\n",
     "                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AD0\"),rhs=gfho.AD[0]),\\\n",
     "                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AD1\"),rhs=gfho.AD[1]),\\\n",
     "                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"AD2\"),rhs=gfho.AD[2]),\\\n",
@@ -100,19 +98,19 @@
     "                            lhrh(lhs=gri.gfaccess(\"out_gfs\",\"ValenciavU2\"),rhs=gfho.ValenciavU[2]),\\\n",
     "                            ]\n",
     "\n",
-    "GiRaFFEFood_A_v_CKernel = fin.FD_outputC(\"returnstring\",GiRaFFEFood_A_v_to_print,params=\"outCverbose=False\")\n",
+    "GiRaFFEfood_A_v_CKernel = fin.FD_outputC(\"returnstring\",GiRaFFEfood_A_v_to_print,params=\"outCverbose=False\")\n",
     "\n",
     "# Format the code within a C loop over cctkGH\n",
-    "GiRaFFEFood_A_v_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],[\"cctk_lsh[2]\",\"cctk_lsh[1]\",\"cctk_lsh[0]\"],\\\n",
+    "GiRaFFEfood_A_v_looped = loop.loop([\"i2\",\"i1\",\"i0\"],[\"0\",\"0\",\"0\"],[\"cctk_lsh[2]\",\"cctk_lsh[1]\",\"cctk_lsh[0]\"],\\\n",
     "                                   [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"],\"\",\\\n",
-    "                                   GiRaFFEFood_A_v_CKernel.replace(\"time\",\"cctk_time\"))\n",
+    "                                   GiRaFFEfood_A_v_CKernel.replace(\"time\",\"cctk_time\"))\n",
     "# Step 3: Create directories for the thorn if they don't exist.\n",
-    "!mkdir GiRaFFEFood_HO     2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
-    "!mkdir GiRaFFEFood_HO/src 2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
+    "!mkdir GiRaFFEfood_HO     2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
+    "!mkdir GiRaFFEfood_HO/src 2>/dev/null # 2>/dev/null: Don't throw an error if the directory already exists.\n",
     "\n",
     "# Step 4: Write the C code kernel to file.\n",
-    "with open(\"GiRaFFEFood_HO/src/GiRaFFEFood_A_v_ExactWald.h\", \"w\") as file:\n",
-    "    file.write(str(GiRaFFEFood_A_v_looped))\n"
+    "with open(\"GiRaFFEfood_HO/src/GiRaFFEfood_A_v_ExactWald.h\", \"w\") as file:\n",
+    "    file.write(str(GiRaFFEfood_A_v_looped))\n"
    ]
   },
   {
@@ -138,12 +136,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFEFood_HO/src/InitialData.c\n"
+      "Overwriting GiRaFFEfood_HO/src/InitialData.c\n"
      ]
     }
    ],
    "source": [
-    "%%writefile GiRaFFEFood_HO/src/InitialData.c\n",
+    "%%writefile GiRaFFEfood_HO/src/InitialData.c\n",
     "#include <math.h>\n",
     "#include <stdio.h>\n",
     "\n",
@@ -158,7 +156,7 @@
     "\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
     "\n",
-    "#include \"GiRaFFEFood_A_v_ExactWald.h\"\n",
+    "#include \"GiRaFFEfood_A_v_ExactWald.h\"\n",
     "\n",
     "}\n",
     "\n",
@@ -236,13 +234,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFEFood_HO/interface.ccl\n"
+      "Overwriting GiRaFFEfood_HO/interface.ccl\n"
      ]
     }
    ],
    "source": [
-    "%%writefile GiRaFFEFood_HO/interface.ccl\n",
-    "implements: GiRaFFEFood_HO\n",
+    "%%writefile GiRaFFEfood_HO/interface.ccl\n",
+    "implements: GiRaFFEfood_HO\n",
     "inherits: admbase GiRaFFE_HO grid HydroBase ShiftedKerrSchild\n"
    ]
   },
@@ -264,12 +262,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFEFood_HO/param.ccl\n"
+      "Overwriting GiRaFFEfood_HO/param.ccl\n"
      ]
     }
    ],
    "source": [
-    "%%writefile GiRaFFEFood_HO/param.ccl\n",
+    "%%writefile GiRaFFEfood_HO/param.ccl\n",
     "shares: grid\n",
     "\n",
     "USES KEYWORD type\n",
@@ -310,12 +308,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFEFood_HO/schedule.ccl\n"
+      "Overwriting GiRaFFEfood_HO/schedule.ccl\n"
      ]
     }
    ],
    "source": [
-    "%%writefile GiRaFFEFood_HO/schedule.ccl\n",
+    "%%writefile GiRaFFEfood_HO/schedule.ccl\n",
     "STORAGE: GiRaFFE_HO::GiRaFFE_vars[3]\n",
     "STORAGE: GiRaFFE_HO::GiRaFFE_Vs[3]\n",
     "\n",
@@ -370,12 +368,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFEFood_HO/src/make.code.defn\n"
+      "Overwriting GiRaFFEfood_HO/src/make.code.defn\n"
      ]
     }
    ],
    "source": [
-    "%%writefile GiRaFFEFood_HO/src/make.code.defn\n",
+    "%%writefile GiRaFFEfood_HO/src/make.code.defn\n",
     "SRCS = InitialData.c"
    ]
   }
