--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -13,7 +13,7 @@
     "We will begin this tutorial in the usual way: import the core NRPy+ modules that we need, set the dimensionality of the grid with parameter $\\text{grid::DIM}$, and declare the basic gridfunctions in [Part 0: Preliminaries](#preliminaries). We will then set $T^{\\mu \\nu}_{\\rm EM} = b^2 u^{\\mu} u^{\\nu} + \\frac{b^2}{2} g^{\\mu \\nu} - b^{\\mu} b^{\\nu}$ and derive and set the related quantities $\\partial_j  T^{j}_{{\\rm EM} i}$ in [Part 1: $T^{\\mu\\nu}_{\\rm EM}$ and its derivatives](#step4). Then, in [Part 2: Evolution equation for $\\tilde{S}_i$](#step7), we will use the previously constructed quantities to build the right hand side for the time-evolution equation $$\\partial_t \\tilde{S}_i = - \\partial_j \\left( \\alpha \\sqrt{\\gamma} T^j_{{\\rm EM} i} \\right) + \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu}.$$ After that, we will construct the evolution equations for the other quantities in [Part 3: Evolution equations for $A_i$ and $\\Phi$](#step8)\n",
     "$$\\partial_t A_i = \\epsilon_{ijk} v^j B^k - \\partial_i (\\alpha \\Phi - \\beta^j A_j)$$ and\n",
     "$$\\partial_t [\\sqrt{\\gamma} \\Phi] = -\\partial_j (\\alpha\\sqrt{\\gamma}A^j - \\beta^j [\\sqrt{\\gamma} \\Phi]) - \\xi \\alpha [\\sqrt{\\gamma} \\Phi].$$\n",
-    "Finally, in [Part 4: Setting the initial $\\tilde{S}_i$ from initial data](#step9), we will build the expression $$\\tilde{S}_i = \\gamma_{ij} \\frac{v^i_{(n)} \\sqrt{\\gamma}B^2}{4 \\pi}.$$ This will be needed to set initial data for $\\tilde{S}_i$ from the initial data defined in the module [Tutorial-GiRaFFEFood_HO.ipynb](Tutorial-GiRaFFEFood_HO.ipynb)\n",
+    "Finally, in [Part 4: Setting the initial $\\tilde{S}_i$ from initial data](#step9), we will build the expression $$\\tilde{S}_i = \\gamma_{ij} \\frac{v^i_{(n)} \\sqrt{\\gamma}B^2}{4 \\pi}.$$ This will be needed to set initial data for $\\tilde{S}_i$ from the initial data defined in the module [Tutorial-GiRaFFEfood_HO.ipynb](Tutorial-GiRaFFEfood_HO.ipynb)\n",
     "\n",
     "\n",
     "#### Table of Contents:\n",
@@ -73,7 +73,7 @@
     "### Steps 0-2: Set up the basic NRPy+ infrastructure we need\n",
     "\\[Back to [top](#top)\\]\n",
     "0. Set the spatial dimension parameter to 3.\n",
-    "1. Set the finite differencing order to 4. The metric quantities $\\alpha$, $\\beta^i$, and $\\gamma_{ij}$ will be initially set by the $\\text{ShiftedKerrSchild}$ thorn, while the Valencia 3-velocity $v^i_{(n)}$ and vector potential $A_i$ will initially be set in the separate thorn **GiRaFFEFood_HO**.\n",
+    "1. Set the finite differencing order to 4. The metric quantities $\\alpha$, $\\beta^i$, and $\\gamma_{ij}$ will be initially set by the $\\text{ShiftedKerrSchild}$ thorn, while the Valencia 3-velocity $v^i_{(n)}$ and vector potential $A_i$ will initially be set in the separate thorn **GiRaFFEfood_HO**.\n",
     "2. To import the four-metric, we will need to call the function **compute_u0_smallb_Poynting__Cartesian(gammaDD,betaU,alpha,ValenciavU,BU)**. Since it has BU as an argument, we will need to first use **ixp.symm_matrix_inverter3x3()** to find gammadet, which in turn allows us to set the Levi-Civita tensor, and then to construct BU."
    ]
   },
