--- a/Tutorial-GiRaFFEfood_HO.ipynb
+++ b/Tutorial-GiRaFFEfood_HO.ipynb
@@ -57,7 +57,7 @@
     "rfm.reference_metric()\n",
     "\n",
     "# Step 1a: Set commonly used parameters.\n",
-    "thismodule = \"GiRaFFEFood_HO\"\n",
+    "thismodule = \"GiRaFFEfood_HO\"\n",
     "# Set the spatial dimension parameter to 3.\n",
     "par.set_parval_from_str(\"grid::DIM\", 3)\n",
     "DIM = par.parval_from_str(\"grid::DIM\")\n",
@@ -236,7 +236,7 @@
     "\n",
     "Here, as a code validation check, we verify agreement in the SymPy expressions for the $\\texttt{GiRaFFE}$ Exact Wald initial data equations  we intend to use between\n",
     "1. this tutorial and \n",
-    "2. the NRPy+ [GiRaFFEFood_HO.py](../edit/GiRaFFEFood_HO/GiRaFFEFood_HO.py) module.\n"
+    "2. the NRPy+ [GiRaFFEfood_HO.py](../edit/GiRaFFEfood_HO/GiRaFFEfood_HO.py) module.\n"
    ]
   },
   {
@@ -256,12 +256,12 @@
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::ymax\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmin\n",
       "initialize_param() minor warning: Did nothing; already initialized parameter reference_metric::zmax\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEFood_HO::IDchoice\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEFood_HO::M\n",
-      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEFood_HO::M_PI\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::IDchoice\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::M\n",
+      "initialize_param() minor warning: Did nothing; already initialized parameter GiRaFFEfood_HO::M_PI\n",
       "^^^ Ignore the minor warnings above. ^^^\n",
       "\n",
-      "Consistency check between GiRaFFEFood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
+      "Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\n",
       "ValenciavU[0] - gfho.ValenciavU[0] = 0\n",
       "AD[0] - gfho.AD[0] = 0\n",
       "ValenciavU[1] - gfho.ValenciavU[1] = 0\n",
@@ -278,12 +278,12 @@
     "\n",
     "print(\"vvv Ignore the minor warnings below. vvv\")\n",
     "\n",
-    "import GiRaFFEFood_HO.GiRaFFEFood_HO as gfho\n",
-    "gfho.GiRaFFEFood_HO()\n",
+    "import GiRaFFEfood_HO.GiRaFFEfood_HO as gfho\n",
+    "gfho.GiRaFFEfood_HO()\n",
     "\n",
     "print(\"^^^ Ignore the minor warnings above. ^^^\\n\")\n",
     "\n",
-    "print(\"Consistency check between GiRaFFEFood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
+    "print(\"Consistency check between GiRaFFEfood_HO tutorial and NRPy+ module: ALL SHOULD BE ZERO.\")\n",
     "\n",
     "for i in range(DIM):\n",
     "\n",
