--- a/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-ETK_thorn-GiRaFFE_Higher_Order.ipynb
@@ -4,9 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\newcommand{\\giraffe}{\\texttt{GiRaFFE}}$\n",
     "<a id='top'></a>\n",
-    "# $\\giraffe$: Solving GRFFE equations at a higher Finite Differencing order\n",
+    "# $\\texttt{GiRaFFE}$: Solving GRFFE equations at a higher Finite Differencing order\n",
     "\n",
     "### NRPy+ Source Code for this module: [Tutorial-GiRaFFE_Higher_Order.py](../edit/Tutorial-GiRaFFE_Higher_Order.py), which is fully documented in the [previous NRPy+ tutorial module](Tutorial-GiRaFFE_Higher_Order.ipynb) on using NRPy+ to construct GRFFE evolution equations and initial data as SymPy expressions.\n"
    ]
@@ -384,14 +383,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/GiRaFFE.c\n"
+      "Writing GiRaFFE_HO/src/GiRaFFE.c\n"
      ]
     }
    ],
@@ -761,7 +760,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will also need to use the conservative to primitive solver from the old version of $\\giraffe$, included here for convenience."
+    "We will also need to use the conservative to primitive solver from the old version of $\\texttt{GiRaFFE}$, included here for convenience."
    ]
   },
   {
@@ -773,7 +772,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/driver_conserv_to_prims_FFE.C\n"
+      "Writing GiRaFFE_HO/src/driver_conserv_to_prims_FFE.C\n"
      ]
     }
    ],
@@ -1090,7 +1089,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/GiRaFFE_headers.h\n"
+      "Writing GiRaFFE_HO/src/GiRaFFE_headers.h\n"
      ]
     }
    ],
@@ -1191,7 +1190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/compute_conservatives_FFE.C\n"
+      "Writing GiRaFFE_HO/src/compute_conservatives_FFE.C\n"
      ]
     }
    ],
@@ -1274,7 +1273,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/GiRaFFE_HydroBase_conversion.c\n"
+      "Writing GiRaFFE_HO/src/GiRaFFE_HydroBase_conversion.c\n"
      ]
     }
    ],
@@ -1363,7 +1362,7 @@
     "The initial data for this module is set up in several steps.\n",
     "1. Run the shifted Kerr-Schild thorn to set up the four-metric we wish to use.\n",
     "1. Set up the four-vector potential $A_\\mu$ (which includes $\\Phi$ and $A_i$) and the Valencia 3-velocity.\n",
-    "1. Run the A-to-B driver from $\\giraffe$ to fill in the initial $B^i$ data.\n",
+    "1. Run the A-to-B driver from $\\texttt{GiRaFFE}$ to fill in the initial $B^i$ data.\n",
     "1. (This module) Run the Primitive-to-Conservative solver to calculate $\\tilde{S}_i$.\n",
     "\n",
     "We will now write a Primitive-to-Conservative solver to calculate initial data for $\\tilde{S}_i$. The formulae for this were built in [a previous tutorial](Tutorial-GiRaFFEfood_HO.ipynb). "
@@ -1400,7 +1399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And now, we will write the C code to use this is based in large part upon ID_converter_GiRaFFE from the old $\\giraffe$."
+    "And now, we will write the C code to use this is based in large part upon ID_converter_GiRaFFE from the old $\\texttt{GiRaFFE}$."
    ]
   },
   {
@@ -1412,7 +1411,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/StildeD_from_initial_data.c\n"
+      "Writing GiRaFFE_HO/src/StildeD_from_initial_data.c\n"
      ]
     }
    ],
@@ -1476,7 +1475,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/interface.ccl\n"
+      "Writing GiRaFFE_HO/interface.ccl\n"
      ]
     }
    ],
@@ -1570,7 +1569,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/param.ccl\n"
+      "Writing GiRaFFE_HO/param.ccl\n"
      ]
     }
    ],
@@ -1655,7 +1654,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/schedule.ccl\n"
+      "Writing GiRaFFE_HO/schedule.ccl\n"
      ]
     }
    ],
@@ -1918,7 +1917,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting GiRaFFE_HO/src/make.code.defn\n"
+      "Writing GiRaFFE_HO/src/make.code.defn\n"
      ]
     }
    ],
