--- a/Tutorial-GiRaFFEfood_HO.ipynb
+++ b/Tutorial-GiRaFFEfood_HO.ipynb
@@ -99,11 +99,11 @@
     "IDchoice = par.parval_from_str(\"IDchoice\")\n",
     "\n",
     "# Initialize all components of A and E in the *spherical basis* to zero\n",
-    "AsphD = ixp.zerorank1()\n",
-    "EsphD = ixp.zerorank1()\n",
+    "ASphD = ixp.zerorank1()\n",
+    "ESphD = ixp.zerorank1()\n",
     "if IDchoice is \"Exact_Wald\":\n",
-    "    AsphD[2] = (r * r * sp.sin(theta)**2)/2\n",
-    "    EsphD[2] = 2 * M * sp.sin(theta)**2 / sp.sqrt(1+2*M/r)\n",
+    "    ASphD[2] = (r * r * sp.sin(theta)**2)/2\n",
+    "    ESphD[2] = 2 * M * sp.sin(theta)**2 / sp.sqrt(1+2*M/r)\n",
     "else:\n",
     "    print(\"Error: IDchoice == \"+par.parval_from_str(\"IDchoice\")+\" unsupported!\")\n",
     "    exit(1)"
@@ -117,14 +117,32 @@
     "### Step 3: Use the Jacobian matrix to transform the vectors to Cartesian coordinates.\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
-    "Now, we will use the coordinate transformation definitions provided by reference_metric.py to build the Jacobian $$ \\frac{\\partial x_i}{\\partial y_j}, $$ where $x_i \\in \\{r,\\theta,\\phi\\}$ and $y_i \\in \\{x,y,z\\}$. We would normally compute its inverse, but since none of the quantities we need to transform have upper indices, it is not necessary. Then, since both $A_i$ and $E_i$ have one lower index, both will need to be multiplied by the Jacobian."
+    "Now, we will use the coordinate transformation definitions provided by reference_metric.py to build the Jacobian \n",
+    "$$ \n",
+    "\\frac{\\partial x_{\\rm Sph}^j}{\\partial x_{\\rm Cart}^i},\n",
+    "$$ \n",
+    "where $x_{\\rm Sph}^j \\in \\{r,\\theta,\\phi\\}$ and $x_{\\rm Cart}^i \\in \\{x,y,z\\}$. We would normally compute its inverse, but since none of the quantities we need to transform have upper indices, it is not necessary. Then, since both $A_i$ and $E_i$ have one lower index, both will need to be multiplied by the Jacobian:\n",
+    "\n",
+    "$$\n",
+    "A_i^{\\rm Cart} = A_j^{\\rm Sph} \\frac{\\partial x_{\\rm Sph}^j}{\\partial x_{\\rm Cart}^i},\n",
+    "$$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiplying ASphD[2] by -xx1/(xx0**2 + xx1**2) to set AD[0]\n",
+      "Multiplying ASphD[2] by xx0/(xx0**2 + xx1**2) to set AD[1]\n",
+      "Multiplying ASphD[2] by 0 to set AD[2]\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 3: Use the Jacobian matrix to transform the vectors to Cartesian coordinates.\n",
     "drrefmetric__dx_0UDmatrix = sp.Matrix([[sp.diff(rfm.xxSph[0],rfm.xx[0]), sp.diff(rfm.xxSph[0],rfm.xx[1]), sp.diff(rfm.xxSph[0],rfm.xx[2])],\n",
@@ -137,8 +155,11 @@
     "\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        AD[i] = drrefmetric__dx_0UDmatrix[(j,i)]*AsphD[j]\n",
-    "        ED[i] = drrefmetric__dx_0UDmatrix[(j,i)]*EsphD[j]\n",
+    "        #print(j,i,drrefmetric__dx_0UDmatrix[(j,i)])\n",
+    "        if ASphD[j] != 0:\n",
+    "            print(\"Multiplying ASphD[\"+str(j)+\"] by \"+str(drrefmetric__dx_0UDmatrix[(j,i)])+\" to set AD[\"+str(i)+\"]\")\n",
+    "        AD[i] = drrefmetric__dx_0UDmatrix[(j,i)]*ASphD[j]\n",
+    "        ED[i] = drrefmetric__dx_0UDmatrix[(j,i)]*ESphD[j]\n",
     "        \n",
     "#Step 4: Register the basic spacetime quantities\n",
     "alpha   = gri.register_gridfunctions(\"AUX\",\"alpha\")\n",
