Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids: Data read-in script now works with both Python2 and 3!

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids.ipynb
@@ -1274,7 +1274,7 @@
     "\n",
     "```python\n",
     "\"\"\"\n",
-    "interp_sph_grids.dat File Reader.\n",
+    "interp_sph_grids.dat File Reader. Compatible with Python 2.7+ and 3.6+ at least.\n",
     "\n",
     "Zachariah B. Etienne\n",
     "\n",
@@ -1293,6 +1293,7 @@
     "\"\"\"\n",
     "import numpy as np\n",
     "import struct\n",
+    "import sys\n",
     "import argparse\n",
     "\n",
     "parser = argparse.ArgumentParser(description='Read file.')\n",
@@ -1317,15 +1318,22 @@
     "Python string.\n",
     "\"\"\"\n",
     "def read_char_array(filehandle,size):\n",
-    "    char_array = \"\"\n",
     "    reached_end_of_string = False\n",
-    "    for i in range(size):\n",
-    "        char = struct.unpack('c', filehandle.read(1))[0]\n",
+    "    chartmp = struct.unpack(str(size)+'s', filehandle.read(size))[0]\n",
+    "\n",
+    "    #https://docs.python.org/3/library/codecs.html#codecs.decode\n",
+    "    char_array_orig = chartmp.decode('utf-8',errors='ignore')\n",
+    "    \n",
+    "    char_array = \"\"\n",
+    "    for i in range(len(char_array_orig)):\n",
+    "        char = char_array_orig[i]\n",
     "        # C strings end in '\\0', which in Python-ese is '\\x00'.\n",
     "        #   As characters read after the end of the string will\n",
     "        #   generally be gibberish, we no longer append \n",
     "        #   to the output string after '\\0' is reached.\n",
-    "        if char == '\\x00':\n",
+    "        if   sys.version_info[0]==3 and bytes(char.encode('utf-8')) == b'\\x00':\n",
+    "            reached_end_of_string = True\n",
+    "        elif sys.version_info[0]==2 and char ==  '\\x00':\n",
     "            reached_end_of_string = True\n",
     "\n",
     "        if reached_end_of_string == False:\n",
@@ -1410,10 +1418,10 @@
     "        this_data = buffer_res.reshape(N0,N1,N2)\n",
     "        \n",
     "        # Sanity check: Make sure the output in the \"middle\" of the grid looks reasonable.\n",
-    "        ii = N0/2\n",
-    "        jj = N1/2\n",
-    "        kk = N2/2\n",
-    "        print(gf_name+\"[\"+str(ii)+\",\"+str(jj)+\",\"+str(kk)+\"] = \"+str(this_data[kk,jj,ii]))\n",
+    "        ii = int(N0/2)\n",
+    "        jj = int(N1/2)\n",
+    "        kk = int(N2/2)\n",
+    "        print(gf_name,this_data[kk,jj,ii])\n",
     "```"
    ]
   }
