--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -453,10 +453,12 @@
     "\\end{align}\n",
     "\n",
     "<a id='table2'></a>\n",
+    "**List of Derivatives**\n",
     "Note that this is in terms of the derivatives of several other quantities:\n",
+    "* Since $b^i$ is itself a function of $B^i$, we will first need its derivatives [$B^i_{,l}$](#Bideriv)\n",
     "* the magnetic field $b^i$, [$b^i_{,k}$](#bideriv)\n",
-    "    * Since $b^i$ is itself a function of $B^i$, we will first need its derivatives [$B^i_{,l}$](#Bideriv)\n",
     "* The derivative of $b^2 = g_{\\mu\\nu} b^\\mu b^\\nu$, [$\\left(b^2\\right)_{,j}$](#b2deriv).\n",
+    "* Putting it together: [$\\partial_j T^{j}_{{\\rm EM} i}$](#alltogether)\n",
     "\n",
     "\\begin{align}\n",
     "%u^i_{,j} &= u^0_{,j} (\\alpha v^i_{(n)} - \\beta^i) + u^0 (\\alpha_{,j} v^i_{(n)} + \\alpha v^i_{(n),j} - \\beta^i_{,j}) \\\\\n",
@@ -608,8 +610,9 @@
     "\\begin{align}\n",
     "b^0 &= \\frac{u_k B^k}{\\sqrt{4\\pi}\\alpha}, \\\\\n",
     "\\rightarrow b^0_{,j} &= \\frac{1}{\\sqrt{4\\pi}} \\frac{\\alpha \\left( u_{k,j} B^k + u_k B^k_{,j} \\right) - u_k B^k \\alpha_{,j}}{\\alpha^2} \\\\\n",
-    "    &= \\frac{\\alpha u_{k,j} B^k + \\alpha u_k B^k_{,j} - \\alpha_{,j} u_k B^k}{\\sqrt{4\\pi} \\alpha^2}\n",
-    "\\end{align}"
+    "    &= \\frac{\\alpha u_{k,j} B^k + \\alpha u_k B^k_{,j} - \\alpha_{,j} u_k B^k}{\\sqrt{4\\pi} \\alpha^2}.\n",
+    "\\end{align}\n",
+    "We will first code the numerator, and then divide through by the denominator."
    ]
   },
   {
@@ -623,12 +626,13 @@
     "smallb4U_dD = ixp.zerorank2(DIM=4)\n",
     "# Fill in the zeroth component\n",
     "for j in range(DIM):\n",
-    "    # The numerator:  \\alpha u_{k,j} B^k \n",
-    "    #               + \\alpha u_k B^k_{,j} \n",
-    "    #               - \\alpha_{,j} u_k B^k\n",
-    "    smallb4U_dD[0][j+1] =   alpha*uD_dD[k][j]*BU[k] \\\n",
-    "                          + alpha*uD[k]*BU_dD[k][j] \\\n",
-    "                          - alpha_dD[j]*uD[k]*BU[k]\n",
+    "    for k in range(DIM):\n",
+    "        # The numerator:  \\alpha u_{k,j} B^k \n",
+    "        #               + \\alpha u_k B^k_{,j} \n",
+    "        #               - \\alpha_{,j} u_k B^k\n",
+    "        smallb4U_dD[0][j+1] =   alpha*uD_dD[k][j]*BU[k] \\\n",
+    "                              + alpha*uD[k]*BU_dD[k][j] \\\n",
+    "                              - alpha_dD[j]*uD[k]*BU[k]\n",
     "for j in range(DIM):\n",
     "    # Divide through by the denominator: \\sqrt{4\\pi} \\alpha^2\n",
     "    smallb4U_dD[0][j+1] /= sp.sqrt(4*M_PI)*alpha*alpha\n",
@@ -715,6 +719,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='alltogether'></a>\n",
+    "\\[Back to the [list of derivatives](#table2)\\]\n",
+    "\n",
     "So, we can now put it all together:\n",
     "\\begin{align}\n",
     "\\partial_j  T^{j}_{{\\rm EM} i} &= \\gamma_{ki,j} T^{kj}_{\\rm EM} + \\gamma_{ki} \\left(\\left(b^2\\right)_{,j} u^j u^k + b^2 u^j_{,j} u^k + b^2 u^j u^k_{,j} + \\frac{1}{2} \\left(b^2\\right)_{,j} g^{jk} + \\frac{b^2}{2} g^{jk}_{\\ ,j} + b^j_{,j} b^k + b^j b^k_{,j}\\right).\n",
