Add a few comments for organization of complicated bits

--- a/Tutorial-GiRaFFE_Higher_Order.ipynb
+++ b/Tutorial-GiRaFFE_Higher_Order.ipynb
@@ -38,6 +38,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*Zach says: Insert this info below. It will really help frame the following discussion.*\n",
+    "$T^{\\mu\\nu}_{\\rm EM}$ is written in terms of\n",
+    "* $b^\\mu$, the 4-component magnetic field vector, related to the comoving magnetic field vector $B^i_{(u)}$\n",
+    "* $u^\\mu$, the 4-velocity\n",
+    "* $g^{\\mu \\nu}$, the inverse 4-metric\n",
+    "\n",
+    "However, $\\texttt{GiRaFFE}$ has access to only the following quantities\n",
+    "* $\\gamma_{ij}$, the 3-metric\n",
+    "* $\\alpha$, the lapse\n",
+    "* $\\beta^i$, the shift\n",
+    "* $A_i$, the vector potential\n",
+    "* $\\left[\\sqrt{\\gamma}\\Phi\\right]$, the zero-component of the vector potential $A_\\mu$, times the square root of the determinant of the 3-metric\n",
+    "* $v_{(n)}^i$, the Valencia 3-velocity\n",
+    "\n",
+    "Thus to compute the needed quantities appearing on the right-hand side of $\\partial_t \\tilde{S}_i$, $\\partial_t A_i$, and $\\partial_t \\left[\\sqrt{\\gamma}\\Phi\\right]$.\n",
+    "* $b^\\mu$:\n",
+    "    * Expand in terms of $B^i_{(u)}$, etc\n",
+    "    * Expand $B^i_{(u)}$ in terms of $B^i$\n",
+    "    * Expand $B^i$ in terms of $A_i$\n",
+    "* $u^\\mu$:\n",
+    "\n",
     "Our ultimate goal here will be to code the evolution equation (from eq. 13 of the [original paper](https://arxiv.org/pdf/1704.00599.pdf)):\n",
     "\\begin{equation}\n",
     "\\partial_t \\tilde{S}_i = - \\partial_j \\left( \\alpha \\sqrt{\\gamma} T^j_{{\\rm EM} i} \\right) + \\frac{1}{2} \\alpha \\sqrt{\\gamma} T^{\\mu \\nu}_{\\rm EM} \\partial_i g_{\\mu \\nu},\n",
@@ -413,6 +434,7 @@
     "### Step 6: Derivatives of the electromagnetic stress-energy tensor\n",
     "\\[Back to [top](#top)\\]\n",
     "\n",
+    "\n",
     "If we look at the evolution equation, we see that we will need spatial  derivatives of $T^{\\mu\\nu}_{\\rm EM}$. In previous tutorials, when confronted with derivatives of complicated expressions, we have declared those expressions as gridfunctions themselves, thus allowing NRPy+ to take finite-difference derivatives of the expressions. This generally reduces the error, because the alternative is to use a function of several finite-difference derivatives, allowing more error to accumulate than the extra gridfunction will introduce. While we will use that technique for some of the subexpressions of $T^{\\mu\\nu}_{\\rm EM}$, we don't want to rely on it for the whole expression; doing so would require us to take the derivative of the magnetic field $B^i$, which is itself found by finite-differencing the vector potential $A_i$. It requires some finesse, then, to find $B^i$ inside the ghost zones, and those values of $B^i$ are necessarily less accurate; taking another derivative from them would only compound the problem. Instead, we will take analytic derivatives of $T^{\\mu\\nu}_{\\rm EM}$.\n",
     "\n",
     "We will now now take these spatial  derivatives of $T^{\\mu\\nu}_{\\rm EM}$, applying the chain rule until it is only in terms of basic gridfunctions and their derivatives: $\\alpha$, $\\beta^i$, $\\gamma_{ij}$, $A_i$, and the four-velocity $u^i$. Along the way, we will also set up useful temporary variables representing the steps of chain rule: \n",
@@ -455,8 +477,8 @@
     "<a id='table2'></a>\n",
     "**List of Derivatives**\n",
     "Note that this is in terms of the derivatives of several other quantities:\n",
-    "* Since $b^i$ is itself a function of $B^i$, we will first need its derivatives [$B^i_{,l}$](#Bideriv)\n",
-    "* the magnetic field $b^i$, [$b^i_{,k}$](#bideriv)\n",
+    "* $B^i_{,l}$: [Since $b^i$ is itself a function of $B^i$, we will first need the derivatives $B^i_{,l}$](#Bideriv)\n",
+    "* $b^i_{,k}$: [Once we have $B^i_{,l}$ we can evaluate derivatives of $b^i$, $b^i_{,k}$](#bideriv)\n",
     "* The derivative of $b^2 = g_{\\mu\\nu} b^\\mu b^\\nu$, [$\\left(b^2\\right)_{,j}$](#b2deriv).\n",
     "* Putting it together: [$\\partial_j T^{j}_{{\\rm EM} i}$](#alltogether)\n",
     "\n",
